--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,18 @@
 melonjs:
-    version: '0.9.8'
+    versions:
+        - '0.9.8'
+        - '0.9.7'
+        - '0.9.6'
+        - '0.9.5'
+        - '0.9.4'
+        - '0.9.3'
+        - '0.9.2'
+        - '0.9.1'
+        - '0.9.0'
+        - '0.8.0'
+        - '0.7.9'
+        - '0.7.6'
+        - '0.7.5'
+        - '0.7.4'
 
 title: melonJS
