fix some various bugs and styling issues

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "rm -rf ./docs && astro build && mv ./dist ./docs",
     "preview": "astro preview"
   },
   "devDependencies": {
