--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "astro": "^1.0.0-beta.65",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-astro": "^0.15.0",
     "prettier": "2.7.1",
     "prettier-plugin-astro": "^0.1.1"
   },
