--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pretty": "npx prettier --write ./src"
   },
   "devDependencies": {
+    "@astrojs/sitemap": "^0.2.6",
     "astro": "^1.0.0-beta.66",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
