add missing "astro-component" in the keywords
https://docs.astro.build/en/guides/publish-to-npm/#integrations-library

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "browser",
     "electron",
     "mobile",
-    "cordova"
+    "cordova",
+    "astro-component"
   ],
   "repository": {
     "type": "git",
