--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "browser",
     "electron",
     "mobile",
-    "cordova",
-    "astro-component"
+    "cordova"
   ],
   "repository": {
     "type": "git",
