--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "pretty": "npx prettier --write ./src"
   },
   "devDependencies": {
-    "@astrojs/sitemap": "^0.2.6",
-    "astro": "^1.0.0-beta.72",
-    "eslint": "^8.19.0",
+    "@astrojs/sitemap": "^1.0.0",
+    "astro": "^1.0.7",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-astro": "^0.15.0",
+    "eslint-plugin-astro": "^0.17.1",
     "prettier": "2.7.1",
-    "prettier-plugin-astro": "^0.1.1"
+    "prettier-plugin-astro": "^0.5.1"
   },
   "dependencies": {
-    "sass": "^1.53.0"
+    "sass": "^1.54.5"
   }
 }
