--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier-plugin-astro": "^0.5.1"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.10.2",
     "node-html-parser": "^5.4.2-0",
     "sass": "^1.54.5"
   }
