--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.10.2",
+    "i18next": "^21.9.1",
+    "melon-solid": "^0.1.0",
     "node-html-parser": "^5.4.2-0",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "solid-js": "^1.5.2"
   }
 }
