--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-astro": "^0.17.1",
+    "glob": "^8.0.3",
+    "node-html-parser": "^6.1.1",
     "prettier": "2.7.1",
     "prettier-plugin-astro": "^0.5.1",
     "solid-js": "^1.5.6"
@@ -51,7 +53,6 @@
     "@astrojs/mdx": "^0.10.2",
     "i18next": "^21.9.1",
     "melon-solid": "^0.1.0",
-    "node-html-parser": "^5.4.2-0",
     "sass": "^1.54.5"
   }
 }
